# TurtleLauncher

./: README.md  __main__.py  build.ps1  compile.ps1  count_code.py  installer.nsi  pyproject.toml
assets/data/: addons.json  turtletv.json  tweets.json
assets/data/locales/: locales.json
turtlelauncher/: __version__.py
turtlelauncher/components/: featured_content.py  header.py  launcher.py  tweets_feed.py
turtlelauncher/dialogs/: __init__.py  addons_manager.py  base.py  binary_select.py  error.py  first_launch.py  game_launch.py  generic_confirmation.py  install_directory.py  install_status.py  settings.py  stop_download.py
turtlelauncher/utils/: color.py  config.py  downloader.py  errors.py  extractor.py  file_utils.py  game_utils.py  get_exe_icon.py  get_file_version.py  globals.py  locale.py  wow_version.py
turtlelauncher/utils/fixes/: base_fixes.py  vanilla_tweaks.py
turtlelauncher/widgets/: gradient_label.py  gradient_progressbar.py  icon_button.py  image_button.py  image_overlay.py  launcher.py  tabs.py  turtle_tv.py  tweet.py  video_player.py  yt_video.py
turtlelauncher/windows/: main_window.py
