[tool.poetry]
name = "turtlelauncher"
version = "2.0.0"
description = "Turtle WoW Launcher Redesigned"
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pywin32 = "^306"
pyside6 = "^6.7.2"
httpx = {extras = ["http2"], version = "^0.27.0"}
aiohttp = "^3.10.4"
loguru = "^0.7.2"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
